syntax = "proto3";
option go_package = "goTemp/promotion/proto";

package promotion;

import  "google/protobuf/timestamp.proto";


service PromotionSrv {
    rpc GetPromotionById(SearchId) returns (Promotion) {}
    rpc GetPromotions(SearchParams) returns (Promotions) {}
    rpc CreatePromotion(Promotion) returns (response) {}
    rpc UpdatePromotion(Promotion) returns (response) {}
    rpc DeletePromotion(SearchId) returns (response) {}
    rpc BeforeCreatePromotion(Promotion) returns (validationErr) {}
    rpc BeforeUpdatePromotion(Promotion) returns (validationErr) {}
    rpc BeforeDeletePromotion(Promotion) returns (validationErr) {}
    rpc AfterCreatePromotion(Promotion) returns (AfterFuncErr) {}
    rpc AfterUpdatePromotion(Promotion) returns (AfterFuncErr) {}
    rpc AfterDeletePromotion(Promotion) returns (AfterFuncErr) {}
}

message response {
    Promotion promotion = 1;
    int64 affectedCount = 2;
    validationErr validationErr = 3;
}

message Discount {
    int64 id = 1;
    double value = 2;
    int32 type = 3;
    string description = 4;
}

message Product {
    int64 id =1;
    string upcCode = 2;
    repeated Discount discount = 3;
}

message Promotion {
    int64 id =1;
    string name =2;
    string description = 3;
    google.protobuf.Timestamp validFrom = 4;
    google.protobuf.Timestamp validThru = 5;
    bool active = 6;
    string customerId = 7;
    repeated Product product =8;
    int32 approvalStatus = 9;
    int32 prevApprovalStatus = 10;
    readOnlyLookups readOnlyLookup = 11;
}

message readOnlyLookups {
    string customerName = 1;
}

message Promotions {
    repeated Promotion promotion =1;
}

message SearchParams {
    int64 id = 1;
    string name = 2;
    int64 productId = 3;
    string customerId = 4;
    google.protobuf.Timestamp validDate = 5;
}

message SearchId {
    int64 id = 1;
}

//message affectedCount {
//    int64 value = 1;
//}

message validationErr {
    repeated string failureDesc = 1;
}

message AfterFuncErr {
    repeated string failureDesc = 1;
}